# parametrize_from_file

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.rst  parametrize_from_file.py  pyproject.toml
.github/workflows/: release.yml  test.yml  test_and_release.yml
docs/: Makefile  api_reference.rst  basic_usage.rst  conf.py  examples.rst  exceptions.rst  getting_started.rst  index.rst  optional_params.rst  optional_params.rst.bkup  python_snippets.rst  requirements.txt  temp_files.rst  test_docs.sh  tutorials.rst
docs/_templates/autosummary/: class.rst  module.rst
docs/api/: parametrize_from_file.ConfigError.rst  parametrize_from_file.Namespace.rst  parametrize_from_file.add_loader.rst  parametrize_from_file.drop_loader.rst  parametrize_from_file.rst  parametrize_from_file.voluptuous.Namespace.rst
docs/examples/: test_vector.nt  test_vector.py  vector.py
docs/exceptions/: test_vector.nt  test_vector.py  vector.py
docs/getting_started/: test_vector.py  test_vector.yml  vector.py
docs/optional_params/: test_vector_kwargs.nt  test_vector_kwargs.py  test_vector_schema.nt  test_vector_schema.py  vector.py
docs/python_snippets/eval/: test_vector.nt  test_vector.py  vector.py
docs/python_snippets/exec/: test_vector.nt  test_vector.py  vector.py
docs/python_snippets/schema/: test_vector.nt  test_vector.py  vector.py
docs/readme/: test_camelot.py  test_camelot.yml  test_misc.py  test_misc.yml
docs/temp_files/: test_vector.nt  test_vector.py  vector.py
parametrize_from_file/: __init__.py  errors.py  loaders.py  namespace.py  parameters.py  parametrize.py  schema.py  utils.py  voluptuous.py
tests/: mock_module.py  mock_module_all.py  mock_module_overwrite.py  test_api.py  test_namespace.py  test_parameters.py  test_parametrize.py  test_schema.py  test_utils.py  test_voluptuous.py
tests/test_load_and_cache_suite_params/: err.yaml  ok.toml  ok.yaml
