[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "parametrize_from_file"
authors = [
  {name = "Kale Kundert", email = "kale@thekunderts.net"},
]
readme = 'README.rst'
dynamic = ["version", "description"]
requires-python = "~=3.7"
dependencies = [
  'toml',
  'pyyaml',
  'nestedtext',
  'tidyexc',
  'pytest',
  'more_itertools~=8.10',
  'contextlib2',
  'decopatch',
  'voluptuous',
]
classifiers = [
  'Programming Language :: Python :: 3',
  'License :: OSI Approved :: MIT License',
]

[project.optional-dependencies]
test = [
  'pytest',
  'pytest-cov',
  'pytest_tmp_files',
  'coveralls',
  'numpy',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
  'sphinx-toolbox',
]

[project.urls]
'Documentation' = 'https://parametrize_from_file.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/parametrize_from_file'
'Bug Tracker' = 'https://github.com/kalekundert/parametrize_from_file/issues'
'Continuous Integration' = 'https://github.com/kalekundert/parametrize_from_file/actions'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/parametrize_from_file'

[tool.pytest.ini_options]
addopts = "--ignore docs --doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'
markers = ["slow"]
filterwarnings = ["error"]

[tool.pccc]
header_length = 72
types = ["chore", "docs", "feat", "fix", "refactor", "style", "test"]
ignore_generated_commits = true
generated_commits = ['^Merge']

[tool.semantic_release]
version_variable = 'parametrize_from_file/__init__.py:__version__'
build_command = 'python -m pip install flit && flit build'
